# bevyjam

./: .gitignore  Cargo.toml  Makefile  README.md
src/: editor.rs  game.rs  main.rs  scene_exporter.rs  ui.rs  util.rs
src/editor/: collider.rs  select.rs  transform.rs  ui.rs
src/game/: animations.rs  audio2d.rs  blueprints.rs  collider.rs  crosshair.rs  damage.rs  dev.rs  doors.rs  enemies.rs  environment.rs  hints.rs  hurt_zones.rs  inventory.rs  main_camera.rs  nav_grid.rs  navmesh.rs  pathfinding.rs  phys_layers.rs  player.rs  player_triggers.rs  sc1.rs  shooting.rs  timer.rs  world_interaction.rs
src/game/animations/: enemies.rs  environment.rs  player.rs  shooting.rs
src/game/environment/: ammo_box.rs  barrel.rs  door.rs  medkit.rs
src/ui/: gameover.rs  hud.rs  mainmenu.rs  ninepatches.rs
